--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,11 +28,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=-Xlint:unchecked
+javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
@@ -54,6 +56,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=lab4.Startup
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
